<resources>
    <string name="app_name">Corona Diagnostic App</string>
    <string name="welcome_message">Welcome to the remote corona diagnostic app</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="required">Required!</string>
    <string name="must_valid_email">Must be a valid email</string>
    <string name="passwords_match">Passwords must match</string>
    <string name="personal_info_request">Please enter your information</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit_personal_info">Submit</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="daily_metric_message">Please check your\ntemperature and cough</string>
    <string name="submit_daily_metrics">Submit</string>
    <string name="temperature">Temperature</string>
    <string name="coughStrength">Cough Strength</string>
    <string name="isCoughWet">Is the cough wet?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="we_re_glad_you_ve_joined_the_effort">We\'re glad you\'ve joined the effort!</string>
    <string name="thousands_of_israelis_could_suffer_the_ill_effects_of_the_coronavirus">Thousands of Israelis could suffer the ill effects of the coronavirus.</string>
    <string name="that_s_why_timely_diagnosis_and_isolation_can_save_your_life">That\'s why timely diagnosis and isolation can save your life!</string>
    <string name="start">Start</string>
    <string name="ready">Ready</string>
    <string name="header_instructions_camera_activity">Please put your finger on the camera, and hold for 30 seconds.</string>
    <string name="start_over">Start Over</string>
    <string name="results">Your results are:</string>
    <string name="header_instructions">Hi there!</string>
    <string name="body_instructions">Would you like to\n diagnose yourself?</string>
    <string name="header_camera">Are you ready for\nthe test?</string>
    <string name="camera_body">In the following screens\nyou will be asked to take\n a video and record\na short recording.</string>
    <string name="im_ready">I\'m Ready!</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="please_put_your_finger_on_camera">Please put your finger on camera</string>
    <string name="your_heart_rate_is">Your heart rate is</string>
    <string name="your_oxygen_saturation_is">Your oxygen saturation is</string>
    <string name="your_respiration_rate_is">Your respiration rate is</string>
    <string name="finish">finish</string>
    <string name="normal">normal</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="severely_high">severely high</string>
    <string name="severely_low">severely low</string>
    <string name="things_look_ok">Great!\nKeep holding your finger</string>
    <string name="good_result">Everything looks OK!</string>
    <string name="call_mda">Please consult MDA regarding your test results</string>
    <string name="medical_questionnaire">Medical Questionnaire</string>
    <string name="measurement_failed">Measurement Failed, Please press the start button again when you are ready !</string>
    <string name="recorder_test">Recorder Test</string>
    <string name="camera_test">Camera Test</string>
    <string name="reminder_notification_title">Daily Health Check</string>
    <string name="reminder_notification_content">It\'s time for the daily health check! 👩‍⚕️</string>
    <string name="autostart_dialog_title">Autostart Enabling</string>
    <string name="autostart_dialog_content">For receiving daily checkup reminders properly, please enable %s in the next settings.</string>
    <string name="settings">settings</string>
    <string name="cancel">Cancel</string>
    <string name="dont_show_again">don\'t show again</string>
    <string name="please_improve_lightning">Weak lighting detected. Please go outside or turn on a stronger light</string>
    <string name="go_outside">For best results, go outside</string>
    <string name="fatigue">Fatigue</string>
    <string name="muscle_weakness">Muscle Weakness</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="fever_question">Do you have a fever?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="corona_exposed_question">Have you been exposed to a verified corona patient ?</string>
    <string name="where_corona_exposed">When were you exposed ?</string>
    <string name="corona_check_question">Have you been checked for corona?</string>
    <string name="corona_diagnosed_question">Are you a diagnosed with corona?</string>
    <string name="when_corona_checked">When were you last got checked up ?</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="exposure_date">Exposure date:</string>
    <string name="selected_date">selected date</string>
    <string name="answer_some_daily_questions">Answer some daily questions</string>
    <string name="choose_all_relevant">Choose all relevant</string>
    <string name="choose_one_relevant">Choose one relevant</string>
    <string name="press_the_mic_button_n_to_start_recording">Press the mic button \n to start recording</string>
    <string name="same">Same</string>
    <string name="better">Better</string>
    <string name="worse">Worse</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="short_report">You give us a short and simple daily report. We\'ll do the rest 😀</string>
    <string name="get_to_know">Let\'s get to know you!</string>
    <string name="your_chance_to_win_corona">
        <![CDATA[
        <font color="#4787EF">Your chance</font> to help fighting the corona virus.
        ]]>
    </string>
    <string name="diabetes">Diabetes</string>
    <string name="autoimmune_disease">Autoimmune Disease</string>
    <string name="asthma">Asthma</string>
    <string name="pulmonary_disease">Chronic Obstructive Pulmonary disease (COPD)</string>
    <string name="chronic_kidney_disease">Chronic Kidney Disease (CKD)</string>
    <string name="header_instructions_demographic_fragment">Have you been diagnosed with any of the following background diseases?</string>
    <string name="high_blood_pressure">High blood pressure (Hypertension)</string>
    <string name="cancer">Have or had Cancer</string>
    <string name="what_s_right_about_you">What\'s right about you?</string>
    <string name="non_smoker">Non smoker</string>
    <string name="smoker">Smoker</string>
    <string name="smoked_5y_ago">Have been smoking and stopped for the last 5 years</string>
    <string name="receives_dialysis_treatment">Receives dialysis treatment</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="tests_done_so_far">%d tests have been done so far!</string>
    <string name="share_now">Share now</string>
    <string name="thx_samples_keep_hygein">Thank you for your samples! \nKeep practicing good hygiene!</string>
    <string name="thank_you">Measurement %d successfully submitted!</string>
    <string name="help_us_research_and_bring_the_world_back_to_normal_by_sharing_the_app">Help us research and bring the world back to normal by sharing the app!</string>
    <string name="continue_arrow">Continue →</string>
    <string name="voice_up">
        <![CDATA[
         <font color="#4787EF">Voice</font> up
        ]]>
    </string>
    <string name="checks_have_been_taken_so_far">
        <![CDATA[
         <font color="#4787EF">%d</font> checks have been taken so far!
        ]]>
    </string>
    <string name="city_back_on_tracks">Together we\'ll get the city back on tracks.</string>
    <string name="about_measurements">
        <![CDATA[
         On the next screen we\'ll take
         <font color="#333333"> 4 short voice samples</font>
         and get a
         <font color="#333333">pulse checks</font>
         from the finger using your camera.]]>
    </string>
    <string name="voice_check">Voice check</string>
    <string name="why_voice_and_pulse">Why voice and pulse?</string>
    <string name="research_shows">Research shows that changes in those physiological signs may help with examining earlier about potential illness!</string>
    <string name="better_checking_in_the_morning_after_brushing_your_teeth">Better checking in the morning, after brushing your teeth.</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="once_a_day_for_a_week_help_promote_the_fight_against_corona">Measurement takes less than 2 minutes, do it once a day, for a week at least, or as much as you can to help promote the fight against covid19 here and worldwide.</string>
    <string name="letsHearSound">let\'s hear the sound</string>
    <string name="letsHear">let\'s hear</string>
    <string name="count_1to10">count in English from 1-10</string>
    <string name="lastTimeLetsHear">last one, we\'d like to hear</string>
    <string name="cough3Times">Cough 3 times</string>
    <string name="soundA">AAAAA</string>
    <string name="soundE">EEEEE</string>
    <string name="soundA_like">Sounds like \'dad\',long without stopping, until your breath runs out</string>
    <string name="soundE_like">Sounds like \'Me\',long without stopping, until your breath runs out</string>
    <string name="can_use_he">if English is hard,you can use Hebrew as well</string>
    <string name="to_record_again_tap_the_microphone_n_to_the_next_recording_tap_continue">To record again tap the microphone\n to the next recording tap continue</string>
</resources>