<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.example.coronadiagnosticapp.ui.views.YesNoQuestionView
        android:id="@+id/did_check_corona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:yn_question="@string/corona_check_question"/>

    <com.example.coronadiagnosticapp.ui.views.YesNoQuestionView
        android:id="@+id/corona_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:yn_question="@string/corona_diagnosed_question"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.example.coronadiagnosticapp.ui.views.DateQuestionView
        android:id="@+id/date_picker_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:date_question="@string/when_corona_checked"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>