<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="64dp"
    tools:context=".ui.fragments.smoking.SmokingFragment">

    <TextView
        android:id="@+id/textView_q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_right_about_you"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/smoke_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_q">

        <com.example.coronadiagnosticapp.ui.views.EkRadioBtn
            android:id="@+id/non_smoker_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/non_smoker"
            android:textSize="20sp" />

        <com.example.coronadiagnosticapp.ui.views.EkRadioBtn
            android:id="@+id/smoker_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/smoker"
            android:textSize="20sp" />

        <com.example.coronadiagnosticapp.ui.views.EkRadioBtn
            android:id="@+id/smoker_5y_ago_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/smoked_5y_ago"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/continue_btn"
        style="@style/customButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>